tests/snapshots/integration__integration_tests__list__list_many_worktrees_with_varied_stats.snap
---
source: tests/integration_tests/list.rs
info:
  program: wt
  args:
    - list
  env:
    APPDATA: "[TEST_CONFIG_HOME]"
    CLAUDE_CONFIG_DIR: "[TEST_CLAUDE_CONFIG]"
    CLICOLOR_FORCE: "1"
    COLUMNS: "500"
    GIT_ALLOW_PROTOCOL: file
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_AUTHOR_EMAIL: test@example.com
    GIT_AUTHOR_NAME: Test User
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_EMAIL: test@example.com
    GIT_COMMITTER_NAME: Test User
    GIT_CONFIG_COUNT: "2"
    GIT_CONFIG_GLOBAL: /nonexistent/wt/gitconfig
    GIT_CONFIG_KEY_0: user.useConfigOnly
    GIT_CONFIG_KEY_1: rerere.enabled
    GIT_CONFIG_SYSTEM: /nonexistent/wt/gitconfig
    GIT_CONFIG_VALUE_0: "true"
    GIT_CONFIG_VALUE_1: "false"
    GIT_TERMINAL_PROMPT: "0"
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    LLVM_PROFILE_FILE: "[LLVM_PROFILE_FILE]"
    OPENCODE_CONFIG_DIR: "[TEST_OPENCODE_CONFIG]"
    PATH: "[PATH]"
    TERM: alacritty
    USERPROFILE: "[TEST_HOME]"
    WORKTRUNK_APPROVALS_PATH: "[TEST_APPROVALS]"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    WORKTRUNK_SYSTEM_CONFIG_PATH: "[TEST_SYSTEM_CONFIG]"
    WORKTRUNK_TEST_BASH_INSTALLED: "0"
    WORKTRUNK_TEST_CLAUDE_INSTALLED: "0"
    WORKTRUNK_TEST_CODEX_INSTALLED: "0"
    WORKTRUNK_TEST_DELAYED_STREAM_MS: "-1"
    WORKTRUNK_TEST_EPOCH: "1735776000"
    WORKTRUNK_TEST_FISH_INSTALLED: "0"
    WORKTRUNK_TEST_GEMINI_INSTALLED: "0"
    WORKTRUNK_TEST_MOCK_CONFIG_DIR: "[TEST_MOCK_CONFIG]"
    WORKTRUNK_TEST_NUSHELL_ENV: "0"
    WORKTRUNK_TEST_OPENCODE_INSTALLED: "0"
    WORKTRUNK_TEST_PARENT_SHELL: ""
    WORKTRUNK_TEST_POWERSHELL_ENV: "0"
    WORKTRUNK_TEST_POWERSHELL_INSTALLED: "0"
    WORKTRUNK_TEST_PROBE_TIMEOUT_MS: "60000"
    WORKTRUNK_TEST_SKIP_URL_HEALTH_CHECK: "1"
    WORKTRUNK_TEST_ZSH_INSTALLED: "0"
    XDG_CONFIG_HOME: "[TEST_CONFIG_HOME]"
---
success: true
exit_code: 0
----- stdout -----
  [1mBranch[0m                      [1mStatus[0m      [1mHEAD±[0m     [1mmain↕[0m    [1mmain…±[0m    [1mRemote⇅[0m  [1mPath[0m                                [1mCommit[0m    [1mAge[0m  [1mMessage[0m
@ main                            [2m^[22m[2m|[22m                                      [2m|[0m     .                                   [2m05a4a45[0m   [2m16h[0m  [2mInitial commit[0m
+ feature-a                       [2m↑[22m                 [32m↑1[0m        [32m+1[0m                ../repo.feature-a                   [2m1b87d47[0m   [2m16h[0m  [2mAdd feature-a file[0m
+ feature-b                       [2m↑[22m                 [32m↑1[0m        [32m+1[0m                ../repo.feature-b                   [2mf62940f[0m   [2m16h[0m  [2mAdd feature-b file[0m
+ feature-c                       [2m↑[22m                 [32m↑1[0m        [32m+1[0m                ../repo.feature-c                   [2m345c7c9[0m   [2m16h[0m  [2mAdd feature-c file[0m
+ [2mmedium-name[0m                     [2m_[22m                                             [2m../repo.medium-name[0m                 [2m05a4a45[0m   [2m16h[0m  [2mInitial commit[0m
+ [2mshort[0m                           [2m_[22m                                             [2m../repo.short[0m                       [2m05a4a45[0m   [2m16h[0m  [2mInitial commit[0m
+ [2mvery-long-branch-name-here[0m      [2m_[22m                                             [2m../repo.very-long-branch-name-here[0m  [2m05a4a45[0m   [2m16h[0m  [2mInitial commit[0m
+ [2mwith-changes[0m                    [2m_[22m                                             [2m../repo.with-changes[0m                [2m05a4a45[0m   [2m16h[0m  [2mInitial commit[0m

----- stderr -----

[2m○[22m [2mShowing 8 worktrees, 3 ahead[0m
